--- a/project/package.json
+++ b/project/package.json
@@ -4,7 +4,8 @@
   "description": "An express project that connects both local and mongoDB database",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Ayush Bhople",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
